docs/k3s/ingress/apps-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
  name: web-domains
spec:
  # valeur par défaut dans k3s
  ingressClassName: traefik
  rules:
    - host: app1.localhost
      http:
        paths:
          - backend:
              service:
                name: app1
                port:
                  number: 80
            path: /
            pathType: Prefix
    - host: app2.localhost
      http:
        paths:
          - backend:
              service:
                name: app2
                port:
                  number: 80
            path: /
            pathType: Prefix
status:
  loadBalancer: {}
